fixed footer spacing

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1296,10 +1296,11 @@
                 flex-wrap: wrap;
                 justify-content: space-between;
                 margin: auto;
+                margin-top: 0;
                 max-width: (307/16rem);
                 width: 96%;
                 ul {
-                    margin-top: 0;
+                    margin-top: 3.125rem;
                     margin-bottom: 0;
                     padding: 0;
 
@@ -1349,9 +1350,11 @@
                             justify-content: flex-start;
                             align-items: center;
                             margin-bottom: (16/16rem);
+                            
 
                             &:last-of-type {
                                 margin-bottom: 0;
+                            
                             }
                         }
                     }
@@ -1441,6 +1444,7 @@
                 width: 96%;
 
                 ul {
+                    margin-top: 0;
                     li {
                         a {
                             position: relative;
